Bug 457044 - Render animation does not prompt before overwriting existing video file
Summary: Render animation does not prompt before overwriting existing video file
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-23 11:10 UTC by Alvin Wong
Modified: 2025-06-18 23:54 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2022-07-23 11:10:22 UTC
SUMMARY

When rendering animation without changing the video location, if the target file already exists, it will be overwritten without warning.

STEPS TO REPRODUCE
1. Successfully render animation to a GIF file (video).
2. Without changing the video location, render the same animation again.

OBSERVED RESULT

Krita does not prompt before overwriting the GIF file.

EXPECTED RESULT

Krita should prompt for confirmation before overwriting the GIF file.

SOFTWARE/OS VERSIONS
Windows: 10

ADDITIONAL INFORMATION
Tested with nightly 44e3597339
Comment 1 Halla Rempt 2022-08-01 13:18:53 UTC
Um, isn't this debatable? I guess that many people will constantly render out their project and then having to confirm the overwrite is annoying. (Though we do this with save as.)
Comment 2 Eoin O'Neill 2022-08-04 00:19:58 UTC
I'm not 100% convinced that users will want to confirm exporting every time a user wants to save a gif either.

However, I think that if we ask about overwriting frame sequences, we might be able to do both in a single prompt when it's a valid thing to do.
Comment 3 Dmitry Kazakov 2024-07-23 11:47:25 UTC
Well, we *do* ask about overwriting temporary frame files. So I guess we should also ask about overwriting the final file. We can actually have an option to opt it out in the Preferences->General->File.
Comment 4 Dmitry Kazakov 2024-08-22 16:38:58 UTC
Remove triaged keyword from CONFIRMED bugs
Comment 5 Emmet O'Neill 2024-09-05 23:16:31 UTC
Fixed in 863df87fc4bd896984e93c7a2972b3602352802c during bugs.kde server outage.
Comment 6 Emmet O'Neill 2025-06-18 23:54:19 UTC
Git commit 19ba654f4cf75282dced9cc952dc1b64fccd6da3 by Emmet O'Neill.
Committed on 18/06/2025 at 23:52.
Pushed by emmetoneill into branch 'krita/5.2'.

Added animation render overwrite confirmation dialog.

Added a short confirmation dialog message to the
animation rendering process when another file
exists at the render output file path.
(cherry picked from commit 863df87fc4bd896984e93c7a2972b3602352802c)

M  +35   -20   libs/ui/animation/KisAnimationRender.cpp

https://invent.kde.org/graphics/krita/-/commit/19ba654f4cf75282dced9cc952dc1b64fccd6da3