Added animation render overwrite confirmation dialog.

Added a short confirmation dialog message to the
animation rendering process when another file
exists at the render output file path.

BUG:457044
(cherry picked from commit 863df87fc4bd896984e93c7a2972b3602352802c)